Arreglando test de categoria